# admin_joo

./: .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  ruff.toml
src/: .env.dev  .env.template  .~lock.persons.xlsx#  person.xlsx  persons.xlsx
src/alembic/: env.py
src/alembic/versions/: 2025_08_04_2025-132680b5c483_.py  2025_08_04_2033-8d008ae0e8c5_.py  2025_08_04_2318-63fe70618caf_.py  2025_08_05_2153-ceee97e4a45d_.py  2025_08_06_1933-7cb482d0824c_.py  2025_09_17_1808-ef3454001aa3_add_feedback.py  2025_09_17_1937-3ad8b54357c4_update_feedback.py
src/app/: app_lifespan.py  create_app.py  main.py  prestart.sh  run_main.py
src/app/api/dependencies/: __init__.py  post.py  rate_limit.py  tier.py  user.py
src/app/api/v1/: __init__.py  auth.py  department.py  feedback.py  (+4 more)
src/app/core/: config.py  logger.py
src/app/dao/: __init__.py  base.py  branch.py  department.py  person.py  post.py  rate_limit.py  role.py  tier.py  token_blacklist.py  user.py
src/app/models/: __init__.py  base.py  branch.py  departments.py  persons.py  post.py  rate_limit.py  roles.py  tier.py  token_blacklist.py  user.py
src/app/schemas/: __init__.py  branch.py  department.py  person.py  post.py  rate_limit.py  response.py  role.py  tier.py  token_blacklist.py  user.py  validation.py
src/data/: departments.json  persons.json  roles.json
src/scripts/: create_departments.py  create_first_superuser.py  create_first_tier.py  create_persons.py  create_roles.py
src/tests/: conftest.py  test_user.py
src/tests/helpers/: generators.py  mocks.py
(+26 files in other folders)
